# my_cuda

./: README.md
ch1/: hello  hello.cu
global_memory/: CMakeLists.txt  globl_memory.cu
mat_add/: README.md  mat_add_2d_2d.cu
